# anajobs

./: .env.example  .gitignore  CLAUDE_API_SETUP.md  Dockerfile  LICENSE  QUICK_START_AI.md  README.md  activate.sh  aggregators_etl.py  cloud_etl_main.py  complete_reset.py  docker-compose.yml  mongo_python_driver_sample.py  pyproject.toml  requirements.txt  run_ai_job_titles_update.py  run_job_extraction.py  run_job_titles_update.py  run_total_reset.py  sample_jobs_extraction_5.jsonl  setup_claude_api.py  test_jobs_extraction.jsonl  total_reset_etl.py  verify_ai_setup.py
config/: config.example.json
data/: complete_corrected_with_descriptions.jsonl  complete_enhanced_jsonl.txt  complete_enhanced_with_sectors_and_descriptions.jsonl  complete_social_impact_database.jsonl  global_social_impact_job_boards.jsonl  job_listing_schema.json  master_do_good_job_boards.jsonl  msf_telemedicine_job_example.json  publicserviceopenings.jsonl  social_good_job_boards.jsonl  social_impact_job_boards_all_apis_sept06.jsonl
docs/: FERRETDB_SETUP.md
reference/: Web Scraping Strategy for Job Postings - Technical Implementation Guide.html
reference/Web Scraping Strategy for Job Postings - Technical Implementation Guide_files/: 1203-156ebcbaa5938679.js  1336-3e0080e5508582b8.js  1625-56f384eb32ff4b62.js  2610-25f851300c66ecb5.js  3592-f1cedc9d54aa305b.js  4647-452967946a4ed963.js  468742119653388  5194-ff15c767f30b4c90.js  5270-c843019162cc3991.js  5777-1b173a6ba89134f4.js  7561-3124f9296f28e7de.js  inner.html  (+14 more)
scripts/: db_comparison.py  init-mongo.js  run.sh  setup_dev.bat  setup_dev.sh
tests/: test_config.py  test_database.py  test_extractor.py
utilities/: ai_job_titles_updater.py  ai_job_titles_updater_v2.py  check_api_key.py  demo_ai_extraction.py  direct_test_job_titles.py  dry_run_test.py  job_extractor.py  job_titles_updater.py  run_full_enhancement.py  sector_correction.py  sector_enhancement.py  test_ai_job_titles.py  test_job_extraction.py  test_job_titles_updater.py  verify_job_titles_update.py
(+6 files in other folders)
